fixes the search container for overflow

--- a/frontend/src/app/features/upload/upload.component.css
+++ b/frontend/src/app/features/upload/upload.component.css
@@ -149,6 +149,7 @@ hr {
     display: flex;
     gap: 15px;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .search-container button {
